# pi-airspace-monitor

./: .gitignore  README.md  pyproject.toml  requirements.txt
airspace_monitor/: __init__.py  __main__.py  aggregator.py  app.py  config.py  schema.py  sources.py
airspace_monitor/static/: app.js  index.html  style.css
deploy/: airspace-monitor.service  rid-bridge.service
examples/: aircraft.json  rid.json
rid_bridge/: __init__.py  __main__.py  app.py  config.py  parse.py  readers.py  store.py
tests/: test_rid_bridge.py
tools/: mock_rid_capture.py  mock_sources.py
