[project]
name = "pi-airspace-monitor"
version = "0.1.0"
description = "Passive receive-only Raspberry Pi aircraft and Remote ID dashboard"
requires-python = ">=3.11"
dependencies = ["fastapi", "uvicorn[standard]", "httpx", "websockets"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true